Fix overflow

--- a/htdocs/themes/math4/math4.css
+++ b/htdocs/themes/math4/math4.css
@@ -74,6 +74,7 @@
 	border-radius: 8px;
 	border: 1px solid #e6e6e6;
 	background: #f6f6f6;
+	overflow: hidden;
 }
 
 #site-links ul ul {
@@ -167,9 +168,13 @@ ul.courses-list a:hover {
 /* this table is a pain, it wants to be a certain width and it'll force you
  * to scroll if you don't have that width, don't know how to fix it */
 table.classlist-table {
-	display: block;
+/*	display: block; */
 	max-width: 95%; /* prevent it from violating container-fluid's padding,
 					 only valid in a rare edge case */
+}
+
+table.classlist-table .tbody {
+    width: 100%;
 }
 
 /* Homework Sets */
